# fastapi-template

./: README.md
.devops/: backend.yaml  init_db.sql
services/profile-service/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/profile-service/src/: config.py  main.py
services/profile-service/src/api/: dependencies.py  exceptions.py  handlers.py  permissions.py
services/profile-service/src/api/http/: routes.py
services/profile-service/src/api/http/profiles/: admin.py  user.py
services/profile-service/src/api/http/seller_account/: admin.py  user.py
services/profile-service/src/api/schemas/: mixins.py  profiles.py  seller_accounts.py  stores.py
services/profile-service/src/application/: constants.py  enums.py  events.py  exceptions.py  interfaces.py  services.py  utils.py
services/profile-service/src/application/dtos/: additionals.py  profiles.py  seller_accounts.py  stores.py
services/profile-service/src/application/use_cases/: profiles.py  seller_accounts.py  stores.py
services/profile-service/src/infrastructure/: consumers.py  geo.py  logging.py  models.py  repositories.py  uow.py
services/profile-service/src/infrastructure/migrations/: env.py
services/profile-service/src/infrastructure/resources/: broker.py  exchanges.py  queues.py  redis_client.py
services/profile-service/src/infrastructure/security/: jwt_service.py
services/profile-service/src/infrastructure/storage/: s3_storage.py
services/profile-service/src/ioc/: __init__.py  infrastructure_provider.py  repository_provider.py  use_case_provider.py
(+14 files in other folders)
