[project]
name = "profile-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "boto3>=1.42.40",
    "cryptography>=46.0.3",
    "dishka>=1.7.2",
    "dishka-faststream>=0.6.0",
    "fastapi>=0.128.0",
    "faststream[rabbit,cli]==0.6.1",
    "geopy>=2.4.1",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn>=0.40.0",
]
